--- a/rpi-ble-services/package.json
+++ b/rpi-ble-services/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "sudo node index.js"
   },
   "author": "Andreas Lundquist",
   "license": "Apache-2.0",
   "dependencies": {
-    "bleno": "^0.3.5"
+    "bleno": "^0.3.5",
+    "serialport": "^4.0.7"
   }
 }
