--- a/rpi-ble-services/package.json
+++ b/rpi-ble-services/package.json
@@ -11,6 +11,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bleno": "^0.3.5",
+    "circular-buffer": "^1.0.2",
     "serialport": "^4.0.7"
   }
 }
