--- a/rpi-ble-services/package.json
+++ b/rpi-ble-services/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bleno": "^0.3.5",
     "circular-buffer": "^1.0.2",
-    "serialport": "^4.0.7"
+    "serialport": "^4.0.7",
+    "mosca": "^2.5.1",
+    "redis": "^2.7.1"
   }
 }
