--- a/rpi-ble-services/package.json
+++ b/rpi-ble-services/package.json
@@ -11,9 +11,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bleno": "^0.3.5",
+    "bluebird": "^3.5.0",
     "circular-buffer": "^1.0.2",
-    "serialport": "^4.0.7",
     "mosca": "^2.5.1",
-    "redis": "^2.7.1"
+    "redis": "^2.7.1",
+    "serialport": "^4.0.7"
   }
 }
