--- a/mqtt-sensors/requirements.txt
+++ b/mqtt-sensors/requirements.txt
@@ -1,7 +1,10 @@
-PyYAML==3.12
+cffi==1.10.0
 docopt==0.6.2
 paho-mqtt==1.3.0
 passlib==1.7.1
+pycparser==2.18
 pyserial==3.3
+PyYAML==3.12
+smbus-cffi==0.5.1
 transitions==0.2.5
 websockets==3.3
