small fixes to bme280 configuration

--- a/mqtt-sensors/bme280.conf.example
+++ b/mqtt-sensors/bme280.conf.example
@@ -1,2 +1,2 @@
 [program:bme280]
-command=/home/pi/VekotinVerstas/mqtt-sensors/env/bin/python /home/pi/VekotinVerstas/mqtt-sensors/bme280.py
+command=sudo /home/pi/VekotinVerstas/mqtt-sensors/env/bin/python /home/pi/VekotinVerstas/mqtt-sensors/bme280.py
